--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="javascript:void()" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-32">CLOSE</a> 
   <br>
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">HOME</a> 
-  <a href="#faq" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">EDUCATION</a> 
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT </a> 
-  <a href="section.html " onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16"> HOBBIES</a> 
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CONTACT</a>
+  <a href="#faq" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">NEO</a> 
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">NCT</a> 
+  <a href="section.html " onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">STUDY</a> 
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">NOTE</a>
 </nav>
 
 <!-- Top menu on small screens -->
@@ -41,9 +41,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <h4><b>About </b></h4>
     <img src="sample.png" alt="sample" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:800px">
-      <h4>HELLO!!! .</h4>
+      <h4>Annyeong people!</h4>
       <p>
-       Write something about the website.
+       Idk but let's get started :)
       </p>
     </div>
   </div>
